--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/index.js"
+    "start": "node ./src/index.js",
+    "start:dev": "nodemon --exec babel-node src/index.js"
+
   },
   "keywords": [],
   "author": "",
